--- a/.hgignore
+++ b/.hgignore
@@ -6,3 +6,5 @@ ConsoleFramework/bin/
 ConsoleFramework/obj/
 ConsoleFramework.6.0.ReSharper.user
 ConsoleFramework.suo
+ConsoleFramework.6.1.ReSharper.user
+ConsoleFramework.sln.DotSettings.user
