--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ControlRenderingBuffer.cs" />
+    <Compile Include="RenderingBuffer.cs" />
     <Compile Include="Controls\BackgroundControl.cs" />
     <Compile Include="Controls\Button.cs" />
     <Compile Include="Controls\Control.cs" />
@@ -56,7 +56,6 @@
     <Compile Include="Core\Vector.cs" />
     <Compile Include="PhysicalCanvas.cs" />
     <Compile Include="Renderer.cs" />
-    <Compile Include="VirtualCanvas.cs" />
     <Compile Include="ConsoleApplication.cs" />
     <Compile Include="Native\NativeMethods.cs" />
     <Compile Include="Native\Structures.cs" />
