--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Controls\LayoutSystem.txt" />
+    <Content Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
