--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -38,12 +38,13 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\KeyboardFocusChangedEventArgs.cs" />
     <Compile Include="Events\KeyEventArgs.cs" />
     <Compile Include="Events\MouseEventArgs.cs" />
     <Compile Include="Controls\Window.cs" />
     <Compile Include="Events\EventManager.cs" />
     <Compile Include="Events\RoutedEventArgs.cs" />
-    <Compile Include="FocusManager.cs" />
+    <Compile Include="Events\FocusManager.cs" />
     <Compile Include="Native\Color.cs" />
     <Compile Include="Native\UnicodeTable.cs" />
     <Compile Include="RenderingBuffer.cs" />
