--- a/Linux/Linux/Linux.csproj
+++ b/Linux/Linux/Linux.csproj
@@ -21,6 +21,11 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
+    <EnvironmentVariables>
+      <EnvironmentVariables>
+        <Variable name="$TERM" value="xterm-1003" />
+      </EnvironmentVariables>
+    </EnvironmentVariables>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
@@ -129,6 +134,7 @@
       <Link>ConsoleFramework\Properties\AssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ConsoleFramework\LinuxProgram.cs" />
+    <Compile Include="ConsoleFramework\Native\LibTermKey.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
