* PhonesBook development started.

--- a/.hgignore
+++ b/.hgignore
@@ -18,3 +18,6 @@ ConsoleFramework/ConsoleFramework.pidb
 etc/LibtermkeyTest/LibtermkeyTest.userprefs
 etc/LibtermkeyTest/LibtermkeyTest/bin/
 etc/LibtermkeyTest/LibtermkeyTest/LibtermkeyTest.pidb
+ConsoleFramework.v11.suo
+PhonesBook/bin/
+PhonesBook/obj/
