* Focus subsystem improved

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -43,6 +43,7 @@
     </Compile>
     <Compile Include="Controls\StrangeControl.cs" />
     <Compile Include="Controls\TextBox.cs" />
+    <Compile Include="Core\VisualTreeHelper.cs" />
     <Compile Include="Events\KeyboardFocusChangedEventArgs.cs" />
     <Compile Include="Events\KeyEventArgs.cs" />
     <Compile Include="Events\MouseEventArgs.cs" />
