--- a/Linux/Linux/Linux.csproj
+++ b/Linux/Linux/Linux.csproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Linux</RootNamespace>
     <AssemblyName>Linux</AssemblyName>
-    <StartupObject>Linux.LinuxProgram</StartupObject>
+    <StartupObject>ConsoleFramework.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\ConsoleFramework\ConsoleApplication.cs">
@@ -57,9 +58,6 @@
     </Compile>
     <Compile Include="..\..\ConsoleFramework\RenderingBuffer.cs">
       <Link>ConsoleFramework\RenderingBuffer.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\BackgroundControl.cs">
-      <Link>ConsoleFramework\Controls\BackgroundControl.cs</Link>
     </Compile>
     <Compile Include="..\..\ConsoleFramework\Controls\Button.cs">
       <Link>ConsoleFramework\Controls\Button.cs</Link>
@@ -135,14 +133,20 @@
     </Compile>
     <Compile Include="ConsoleFramework\LinuxProgram.cs" />
     <Compile Include="ConsoleFramework\Native\LibTermKey.cs" />
+    <Compile Include="..\..\ConsoleFramework\Controls\StrangeControl.cs">
+      <Link>ConsoleFramework\Controls\StrangeControl.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\StrangePanel.cs">
+      <Link>ConsoleFramework\Controls\StrangePanel.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Core\VisualTreeHelper.cs">
+      <Link>ConsoleFramework\Core\VisualTreeHelper.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="..\..\ConsoleFramework\ConsoleFramework.csproj">
       <Link>ConsoleFramework\ConsoleFramework.csproj</Link>
-    </None>
-    <None Include="..\..\ConsoleFramework\ConsoleFramework.pidb">
-      <Link>ConsoleFramework\ConsoleFramework.pidb</Link>
     </None>
     <None Include="..\..\ConsoleFramework\readme.txt">
       <Link>ConsoleFramework\readme.txt</Link>
