--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -42,6 +42,7 @@
       <Link>Native\LibTermKey.cs</Link>
     </Compile>
     <Compile Include="Controls\ComboBox.cs" />
+    <Compile Include="Controls\GroupBox.cs" />
     <Compile Include="Controls\ListBox.cs" />
     <Compile Include="Controls\ScrollViewer.cs" />
     <Compile Include="Controls\StrangeControl.cs" />
