+ Added some unit tests for Binding.

--- a/Binding/Binding.csproj
+++ b/Binding/Binding.csproj
@@ -43,7 +43,6 @@
     <Compile Include="Converters\ConversionResult.cs" />
     <Compile Include="Converters\IBindingConverter.cs" />
     <Compile Include="Converters\StringToIntegerConverter.cs" />
-    <Compile Include="IBindingResultListener.cs" />
     <Compile Include="INotifyPropertyChanged.cs" />
     <Compile Include="IPropertyChangedListener.cs" />
     <Compile Include="Observables\IObservableList.cs" />
@@ -58,7 +57,9 @@
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="roadmap.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
