--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -45,12 +45,19 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Binding\CollectionsTest.cs" />
+    <Compile Include="Binding\SimplePropertiesTest.cs" />
+    <Compile Include="Binding\ValidationTest.cs" />
     <Compile Include="LayoutTests.cs" />
     <Compile Include="MarkupExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HitTestingTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Binding\Binding.csproj">
+      <Project>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</Project>
+      <Name>Binding</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ConsoleFramework\ConsoleFramework.csproj">
       <Project>{2A59C284-2995-4F37-8D65-411C25C85493}</Project>
       <Name>ConsoleFramework</Name>
