--- a/Binding/Binding.csproj
+++ b/Binding/Binding.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Observables\ObservableList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Converters\ReversedConverter.cs" />
     <Compile Include="Validators\IBindingValidator.cs" />
     <Compile Include="Validators\RequiredValidator.cs" />
     <Compile Include="Validators\ValidationResult.cs" />
