--- a/Binding/Binding.csproj
+++ b/Binding/Binding.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Binding</RootNamespace>
     <AssemblyName>Binding</AssemblyName>
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Adapters\IBindingAdapter.cs" />
     <Compile Include="BindingBase.cs" />
@@ -46,7 +49,6 @@
     <Compile Include="Observables\IObservableList.cs" />
     <Compile Include="Observables\IObservableListListener.cs" />
     <Compile Include="Observables\ObservableList.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Converters\ReversedConverter.cs" />
     <Compile Include="Validators\IBindingValidator.cs" />
