--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -79,7 +79,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Events\RoutedEvent.cs" />
     <Compile Include="Xaml\BindingMarkupExtension.cs" />
+    <Compile Include="Xaml\ConvertMarkupExtension.cs" />
     <Compile Include="Xaml\MarkupExtensionsParser.cs" />
+    <Compile Include="Xaml\RefMarkupExtension.cs" />
     <Compile Include="Xaml\StringToBoolConverter.cs" />
     <Compile Include="Xaml\TypeConvertersResolver.cs" />
     <Compile Include="Xaml\XamlParser.cs" />
