+ Added aliases for most frequent primitives. Fixed objects content assigned from text parsing.

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Xaml\BindingMarkupExtension.cs" />
     <Compile Include="Xaml\ConvertMarkupExtension.cs" />
     <Compile Include="Xaml\MarkupExtensionsParser.cs" />
+    <Compile Include="Xaml\Primitives.cs" />
     <Compile Include="Xaml\RefMarkupExtension.cs" />
     <Compile Include="Xaml\XamlParser.cs" />
   </ItemGroup>
