+ Added ctor args support in XAML (using ObjectFactory).

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -81,8 +81,9 @@
     <Compile Include="Xaml\BindingMarkupExtension.cs" />
     <Compile Include="Xaml\ConvertMarkupExtension.cs" />
     <Compile Include="Xaml\MarkupExtensionsParser.cs" />
-    <Compile Include="Xaml\Primitives.cs" />
+    <Compile Include="Xaml\Factories.cs" />
     <Compile Include="Xaml\RefMarkupExtension.cs" />
+    <Compile Include="Xaml\TypeMarkupExtension.cs" />
     <Compile Include="Xaml\XamlParser.cs" />
   </ItemGroup>
   <ItemGroup>
