* Fixed bug in rendering (when buffer was greater than RenderSize of control).

--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Content Include="Controls\LayoutSystem.txt" />
     <Content Include="Events\Focus.txt" />
+    <EmbeddedResource Include="Layout.xml" />
     <Content Include="Xaml\xaml.txt" />
     <EmbeddedResource Include="MainWindow.xml">
       <SubType>Designer</SubType>
