--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -96,6 +96,7 @@
     <Content Include="Controls\LayoutSystem.txt" />
     <Content Include="Events\Focus.txt" />
     <EmbeddedResource Include="Layout.xml" />
+    <EmbeddedResource Include="GridTest.xml" />
     <Content Include="Xaml\xaml.txt" />
     <EmbeddedResource Include="MainWindow.xml">
       <SubType>Designer</SubType>
