--- a/TestProject1/TestProject1.csproj
+++ b/TestProject1/TestProject1.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding\AdapterTest.cs" />
+    <Compile Include="Binding\CollectionRebindTest.cs" />
     <Compile Include="Binding\CollectionsTest.cs" />
     <Compile Include="Binding\ExplicitConverterTest.cs" />
     <Compile Include="Binding\SimplePropertiesTest.cs" />
