--- a/PhonesBook/PhonesBook.csproj
+++ b/PhonesBook/PhonesBook.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>PhonesBook</RootNamespace>
     <AssemblyName>PhonesBook</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
