--- a/Linux/Linux/Linux.csproj
+++ b/Linux/Linux/Linux.csproj
@@ -8,19 +8,19 @@
     <ProjectGuid>{7F4926FC-252F-455F-828B-7748DDD4029F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Linux</RootNamespace>
-    <AssemblyName>Linux</AssemblyName>
+    <AssemblyName>ConsoleFramework</AssemblyName>
     <StartupObject>ConsoleFramework.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
+    <Externalconsole>True</Externalconsole>
     <EnvironmentVariables>
       <EnvironmentVariables>
         <Variable name="$TERM" value="xterm-1003" />
@@ -29,18 +29,22 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <Externalconsole>true</Externalconsole>
+    <Externalconsole>True</Externalconsole>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
     <Reference Include="Mono.Posix" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="ConsoleFramework\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\ConsoleFramework\ConsoleApplication.cs">
@@ -52,11 +56,38 @@
     <Compile Include="..\..\ConsoleFramework\Controls\Button.cs">
       <Link>ConsoleFramework\Controls\Button.cs</Link>
     </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\ComboBox.cs">
+      <Link>ConsoleFramework\Controls\ComboBox.cs</Link>
+    </Compile>
     <Compile Include="..\..\ConsoleFramework\Controls\Control.cs">
       <Link>ConsoleFramework\Controls\Control.cs</Link>
     </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\Grid.cs">
+      <Link>ConsoleFramework\Controls\Grid.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\GroupBox.cs">
+      <Link>ConsoleFramework\Controls\GroupBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\ListBox.cs">
+      <Link>ConsoleFramework\Controls\ListBox.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\MessageBox.cs">
+      <Link>ConsoleFramework\Controls\MessageBox.cs</Link>
+    </Compile>
     <Compile Include="..\..\ConsoleFramework\Controls\Panel.cs">
       <Link>ConsoleFramework\Controls\Panel.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\ProgressBar.cs">
+      <Link>ConsoleFramework\Controls\ProgressBar.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\ScrollViewer.cs">
+      <Link>ConsoleFramework\Controls\ScrollViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\StrangeControl.cs">
+      <Link>ConsoleFramework\Controls\StrangeControl.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Controls\StrangePanel.cs">
+      <Link>ConsoleFramework\Controls\StrangePanel.cs</Link>
     </Compile>
     <Compile Include="..\..\ConsoleFramework\Controls\TextBlock.cs">
       <Link>ConsoleFramework\Controls\TextBlock.cs</Link>
@@ -70,6 +101,9 @@
     <Compile Include="..\..\ConsoleFramework\Controls\WindowsHost.cs">
       <Link>ConsoleFramework\Controls\WindowsHost.cs</Link>
     </Compile>
+    <Compile Include="..\..\ConsoleFramework\Core\Colors.cs">
+      <Link>ConsoleFramework\Core\Colors.cs</Link>
+    </Compile>
     <Compile Include="..\..\ConsoleFramework\Core\Point.cs">
       <Link>ConsoleFramework\Core\Point.cs</Link>
     </Compile>
@@ -82,8 +116,14 @@
     <Compile Include="..\..\ConsoleFramework\Core\Thickness.cs">
       <Link>ConsoleFramework\Core\Thickness.cs</Link>
     </Compile>
+    <Compile Include="..\..\ConsoleFramework\Core\UnicodeTable.cs">
+      <Link>ConsoleFramework\Core\UnicodeTable.cs</Link>
+    </Compile>
     <Compile Include="..\..\ConsoleFramework\Core\Vector.cs">
       <Link>ConsoleFramework\Core\Vector.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Core\VisualTreeHelper.cs">
+      <Link>ConsoleFramework\Core\VisualTreeHelper.cs</Link>
     </Compile>
     <Compile Include="..\..\ConsoleFramework\Events\EventManager.cs">
       <Link>ConsoleFramework\Events\EventManager.cs</Link>
@@ -106,46 +146,6 @@
     <Compile Include="..\..\ConsoleFramework\Events\RoutedEventArgs.cs">
       <Link>ConsoleFramework\Events\RoutedEventArgs.cs</Link>
     </Compile>
-    <Compile Include="..\..\ConsoleFramework\Properties\AssemblyInfo.cs">
-      <Link>ConsoleFramework\Properties\AssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="ConsoleFramework\LinuxProgram.cs" />
-    <Compile Include="..\..\ConsoleFramework\Controls\StrangeControl.cs">
-      <Link>ConsoleFramework\Controls\StrangeControl.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\StrangePanel.cs">
-      <Link>ConsoleFramework\Controls\StrangePanel.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Core\VisualTreeHelper.cs">
-      <Link>ConsoleFramework\Core\VisualTreeHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\ComboBox.cs">
-      <Link>ConsoleFramework\Controls\ComboBox.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\GroupBox.cs">
-      <Link>ConsoleFramework\Controls\GroupBox.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\ListBox.cs">
-      <Link>ConsoleFramework\Controls\ListBox.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\ScrollViewer.cs">
-      <Link>ConsoleFramework\Controls\ScrollViewer.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Core\Colors.cs">
-      <Link>ConsoleFramework\Core\Colors.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Core\UnicodeTable.cs">
-      <Link>ConsoleFramework\Core\UnicodeTable.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Rendering\PhysicalCanvas.cs">
-      <Link>ConsoleFramework\Rendering\PhysicalCanvas.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Rendering\Renderer.cs">
-      <Link>ConsoleFramework\Rendering\Renderer.cs</Link>
-    </Compile>
-    <Compile Include="..\..\ConsoleFramework\Rendering\RenderingBuffer.cs">
-      <Link>ConsoleFramework\Rendering\RenderingBuffer.cs</Link>
-    </Compile>
     <Compile Include="..\..\ConsoleFramework\Native\LibTermKey.cs">
       <Link>ConsoleFramework\Native\LibTermKey.cs</Link>
     </Compile>
@@ -158,23 +158,52 @@
     <Compile Include="..\..\ConsoleFramework\Native\Win32.cs">
       <Link>ConsoleFramework\Native\Win32.cs</Link>
     </Compile>
+    <Compile Include="..\..\ConsoleFramework\Properties\AssemblyInfo.cs">
+      <Link>ConsoleFramework\Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Rendering\PhysicalCanvas.cs">
+      <Link>ConsoleFramework\Rendering\PhysicalCanvas.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Rendering\Renderer.cs">
+      <Link>ConsoleFramework\Rendering\Renderer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Rendering\RenderingBuffer.cs">
+      <Link>ConsoleFramework\Rendering\RenderingBuffer.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\BindingMarkupExtension.cs">
+      <Link>ConsoleFramework\Xaml\BindingMarkupExtension.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\ContentPropertyAttribute.cs">
+      <Link>ConsoleFramework\Xaml\ContentPropertyAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\ConvertMarkupExtension.cs">
+      <Link>ConsoleFramework\Xaml\ConvertMarkupExtension.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\Factories.cs">
+      <Link>ConsoleFramework\Xaml\Factories.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\ITypeConverter.cs">
+      <Link>ConsoleFramework\Xaml\ITypeConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\MarkupExtensionAttribute.cs">
+      <Link>ConsoleFramework\Xaml\MarkupExtensionAttribute.cs</Link>
+    </Compile>
     <Compile Include="..\..\ConsoleFramework\Xaml\MarkupExtensionsParser.cs">
       <Link>ConsoleFramework\Xaml\MarkupExtensionsParser.cs</Link>
     </Compile>
-    <Compile Include="..\..\ConsoleFramework\Xaml\StringToBoolConverter.cs">
-      <Link>ConsoleFramework\Xaml\StringToBoolConverter.cs</Link>
+    <Compile Include="..\..\ConsoleFramework\Xaml\RefMarkupExtension.cs">
+      <Link>ConsoleFramework\Xaml\RefMarkupExtension.cs</Link>
     </Compile>
-    <Compile Include="..\..\ConsoleFramework\Xaml\TypeConvertersResolver.cs">
-      <Link>ConsoleFramework\Xaml\TypeConvertersResolver.cs</Link>
+    <Compile Include="..\..\ConsoleFramework\Xaml\TypeConverterAttribute.cs">
+      <Link>ConsoleFramework\Xaml\TypeConverterAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\ConsoleFramework\Xaml\TypeMarkupExtension.cs">
+      <Link>ConsoleFramework\Xaml\TypeMarkupExtension.cs</Link>
     </Compile>
     <Compile Include="..\..\ConsoleFramework\Xaml\XamlParser.cs">
       <Link>ConsoleFramework\Xaml\XamlParser.cs</Link>
     </Compile>
-    <Compile Include="..\..\ConsoleFramework\Controls\MessageBox.cs">
-      <Link>ConsoleFramework\Controls\MessageBox.cs</Link>
-    </Compile>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="..\..\ConsoleFramework\ConsoleFramework.csproj">
       <Link>ConsoleFramework\ConsoleFramework.csproj</Link>
@@ -188,13 +217,27 @@
     <None Include="..\..\ConsoleFramework\Events\Focus.txt">
       <Link>ConsoleFramework\Events\Focus.txt</Link>
     </None>
+    <None Include="..\..\ConsoleFramework\Xaml\xaml.txt">
+      <Link>ConsoleFramework\Xaml\xaml.txt</Link>
+    </None>
+    <None Include="..\..\ConsoleFramework\Xaml\xaml.xsd">
+      <Link>ConsoleFramework\Xaml\xaml.xsd</Link>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ConsoleFramework\Native\" />
-    <Folder Include="ConsoleFramework\Rendering\" />
-    <Folder Include="ConsoleFramework\Xaml\" />
+    <ProjectReference Include="..\..\Binding\Binding.csproj">
+      <Project>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</Project>
+      <Name>Binding</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\..\ConsoleFramework\GridTest.xml">
+      <Link>ConsoleFramework\GridTest.xml</Link>
+      <LogicalName>ConsoleFramework.GridTest.xml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\ConsoleFramework\Layout.xml">
+      <Link>ConsoleFramework\Layout.xml</Link>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\..\ConsoleFramework\MainWindow.xml">
       <Link>ConsoleFramework\MainWindow.xml</Link>
     </EmbeddedResource>
