+ Added MacOS X support.

--- a/Linux/Linux/Linux.csproj
+++ b/Linux/Linux/Linux.csproj
@@ -223,6 +223,7 @@
     <None Include="..\..\ConsoleFramework\Xaml\xaml.xsd">
       <Link>ConsoleFramework\Xaml\xaml.xsd</Link>
     </None>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Binding\Binding.csproj">
